# logistica

./: .gitignore  pyproject.toml
logistica/: dbt_project.yml
logistica/models/marts/: fct_pedidos.sql
logistica/models/staging/: sources.yml  stg_base_geral.sql
scripts/: carga_bigquery.py  carga_inicial.py
